--- a/html/index.html
+++ b/html/index.html
@@ -205,157 +205,114 @@
       <h1 id="MY">My <span>Skills</span></h1>
       <div class="skill-container">
         <h2 id="ln">Lenguages</h2>
-        <div class="carousel slide" id="carouselSkills" data-bs-ride="true" data-bs-touch="true">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <div id="Scontenedor">
-                <div class="card" id="HTML">
-                  <div class="icon">
-                    <i class='bx bxl-html5'></i>
-                  </div>
-                  <div class="Stitle">
-                    <div class="card-body">
-                      <h5 class="card-title">HTML</h5>
-                    </div>
-                  </div>
-
+        <div class="lenguages">
+          <div class="owl-carousel owl-carousel-2">
+            <div class="item">
+              <div class="card" id="HTML">
+                <div class="icon">
+                  <i class='bx bxl-html5'></i>
                 </div>
-                <div class="card" id="CSS">
-                  <div class="icon">
-                    <i class='bx bxl-css3'></i>
+                <div class="Stitle">
+                  <div class="card-body">
+                    <h5 class="card-title">HTML</h5>
                   </div>
-                  <div class="Stitle">
-                    <div class="card-body">
-                      <h5 class="card-title">CSS</h5>
-                    </div>
-                  </div>
-
-                </div>
-                <div class="card" id="JAVASCRIPT">
-                  <div class="icon">
-                    <i class='bx bxl-javascript'></i>
-                  </div>
-                  <div class="Stitle">
-                    <div class="card-body">
-                      <h5 class="card-title">Javascript</h5>
-                    </div>
-                  </div>
-
                 </div>
               </div>
             </div>
-            <div class="carousel-item">
-              <div id="Scontenedor">
-                <div class="card" id="JAVA">
-                  <div class="icon">
-                    <img src="../img/java.png" alt="Java" class="img-fluid">
-                  </div>
-                  <div class="Stitle">
-                    <div class="card-body">
-                      <h5 class="card-title">Java</h5>
-                    </div>
-                  </div>
-
+            <div class="item">
+              <div class="card" id="CSS">
+                <div class="icon">
+                  <i class='bx bxl-css3'></i>
                 </div>
-                <div class="card" id="C">
-                  <div class="icon">
-                    <img src="../img/c-.png" alt="C++" class="img-fluid">
+                <div class="Stitle">
+                  <div class="card-body">
+                    <h5 class="card-title">CSS</h5>
                   </div>
-                  <div class="Stitle">
-                    <div class="card-body">
-                      <h5 class="card-title">C++</h5>
-                    </div>
-                  </div>
-
                 </div>
               </div>
             </div>
-          </div>
-          <button class="carousel-control-prev POS" type="button" data-bs-target="#carouselSkills" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselSkills" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-
-
+            <div class="item">
+              <div class="card" id="JAVASCRIPT">
+                <div class="icon">
+                  <i class='bx bxl-javascript'></i>
+                </div>
+                <div class="Stitle">
+                  <div class="card-body">
+                    <h5 class="card-title">Javascript</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="card" id="JAVA">
+                <div class="icon">
+                  <img src="../img/java.png" alt="Java" class="img-fluid">
+                </div>
+                <div class="Stitle">
+                  <div class="card-body">
+                    <h5 class="card-title">Java</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="card" id="C">
+                <div class="icon">
+                  <img src="../img/c-.png" alt="C++" class="img-fluid">
+                </div>
+                <div class="Stitle">
+                  <div class="card-body">
+                    <h5 class="card-title">C++</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
         </div>
 
         <h2 id="FW">FRAMEWORKS</h2>
+        <div class="frameworks">
 
-        <div class="carousel slide" id="carouselSkillsF" data-bs-ride="true" data-bs-touch="true">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <div id="Scontenedor">
-                <div class="card" id="BOOTSTRAP">
-                  <div class="icon">
-                    <i class='bx bxl-bootstrap'></i>
-                  </div>
-                  <div class="Stitle">
-                    <div class="card-body">
-                      <h5 class="card-title">Bootstrap</h5>
-                    </div>
-                  </div>
-                </div>
+          <div class="card" id="BOOTSTRAP">
+            <div class="icon">
+              <i class='bx bxl-bootstrap'></i>
+            </div>
+            <div class="Stitle">
+              <div class="card-body">
+                <h5 class="card-title">Bootstrap</h5>
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselSkillsF" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselSkillsF" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-
           </div>
-
         </div>
         <h2 id="PR">CSS PREPOCESSOR</h2>
-        <div class="carousel slide" id="carouselSkillsF" data-bs-ride="true" data-bs-touch="true">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <div id="Scontenedor">
-                <div class="card" id="SASS">
-                  <div class="icon">
-                    <i class='bx bxl-sass'></i>
-                  </div>
-                  <div class="Stitle">
-                    <div class="card-body">
-                      <h5 class="card-title">Bootstrap</h5>
-                    </div>
-                  </div>
-                </div>
+        <div class="PREPOCESSOR">
+          <div class="card" id="SASS">
+            <div class="icon">
+              <i class='bx bxl-sass'></i>
+            </div>
+            <div class="Stitle">
+              <div class="card-body">
+                <h5 class="card-title">SASS</h5>
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselSkillsF" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselSkillsF" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-
           </div>
-
         </div>
+
+
       </div>
-    </div>
   </section>
 
   <section class="Projects">
     <h1 id="MY">My <span>Projects</span></h1>
     <div class="projects-container">
-      <div class="owl-carousel">
+
+      <div class="owl-carousel owl-carousel-1">
         <div class="item">
           <div class="card">
             <div class="card-container">
               <div class="card-body">
 
-                <h1 class="card-title">Portfolio Web</h1>
+                <h1 class="card-title">Portfolio Web 1</h1>
                 <p class="card-text">Explore my portfolio website, a showcase of creativity and technical skills.
                   Designed
                   with HTML, CSS, Bootstrap, and SASS, this project stands out for its modern appeal.</p>
@@ -376,29 +333,54 @@
 
         <div class="item">
           <div class="card">
-          <div class="card-container">
-            <div class="card-body">
+            <div class="card-container">
+              <div class="card-body">
 
-              <h1 class="card-title">Portfolio Web</h1>
-              <p class="card-text">Explore my portfolio website, a showcase of creativity and technical skills. Designed
-                with HTML, CSS, Bootstrap, and SASS, this project stands out for its modern appeal.</p>
-              <div id="Spans">
-                <span id="SpHTML"><i class='bx bxl-html5'></i>HTML</span>
-                <span id="SpCSS"><i class='bx bxl-css3'></i>CSS</span>
-                <span id="SpJavascript"><i class='bx bxl-javascript'></i>Javascript</span>
-                <span id="SpBootstrap"><i class='bx bxl-bootstrap'></i>Bootstrap</span>
-                <span id="SpSASS"><i class='bx bxl-sass'></i>SASS</span>
-              </div>
-              <div>
-                <a href="#" class="bx-Link"><i class='bx bx-link'></i></a>
-                <a href="#" class="bx-Git"><i class="bi bi-github"></i></a>
+                <h1 class="card-title">Portfolio Web 2</h1>
+                <p class="card-text">Explore my portfolio website, a showcase of creativity and technical skills.
+                  Designed
+                  with HTML, CSS, Bootstrap, and SASS, this project stands out for its modern appeal.</p>
+                <div id="Spans">
+                  <span id="SpHTML"><i class='bx bxl-html5'></i>HTML</span>
+                  <span id="SpCSS"><i class='bx bxl-css3'></i>CSS</span>
+                  <span id="SpJavascript"><i class='bx bxl-javascript'></i>Javascript</span>
+                  <span id="SpBootstrap"><i class='bx bxl-bootstrap'></i>Bootstrap</span>
+                  <span id="SpSASS"><i class='bx bxl-sass'></i>SASS</span>
+                </div>
+                <div>
+                  <a href="#" class="bx-Link"><i class='bx bx-link'></i></a>
+                  <a href="#" class="bx-Git"><i class="bi bi-github"></i></a>
+                </div>
               </div>
             </div>
           </div>
         </div>
+
+        <div class="item">
+          <div class="card">
+            <div class="card-container">
+              <div class="card-body">
+
+                <h1 class="card-title">Portfolio Web 3</h1>
+                <p class="card-text">Explore my portfolio website, a showcase of creativity and technical skills.
+                  Designed
+                  with HTML, CSS, Bootstrap, and SASS, this project stands out for its modern appeal.</p>
+                <div id="Spans">
+                  <span id="SpHTML"><i class='bx bxl-html5'></i>HTML</span>
+                  <span id="SpCSS"><i class='bx bxl-css3'></i>CSS</span>
+                  <span id="SpBootstrap"><i class='bx bxl-bootstrap'></i>Bootstrap</span>
+                  <span id="SpSASS"><i class='bx bxl-sass'></i>SASS</span>
+                </div>
+                <div>
+                  <a href="#" class="bx-Link"><i class='bx bx-link'></i></a>
+                  <a href="#" class="bx-Git"><i class="bi bi-github"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        
       </div>
+
     </div>
   </section>
 </body>
@@ -412,27 +394,43 @@
 
 
 <script>
-  $(document).ready(function(){
-    $(".owl-carousel").owlCarousel({
-      items: 2, // Muestra solo dos tarjetas a la vez // Centra las tarjetas
+  $(document).ready(function () {
+    $('.owl-carousel-1').owlCarousel({
       loop: false,
-      margin: 20,
-      autoplay: true,
-      autoplayTimeout: 3000,
-      responsive:{
-        0:{
-          items:1
+      margin: 10,
+      nav: false,
+      responsive: {
+        0: {
+          items: 1
         },
-        500:{
-          items:2
+        600: {
+          items: 3
+        }
+      }
+    });
+  });
+
+  $(document).ready(function () {
+    $('.owl-carousel-2').owlCarousel({
+      loop: false,
+      nav: false,
+      responsive: {
+        0: {
+          items: 2
         },
-        1000:{
-          items:3
+        600: {
+          items: 3
+        },
+        1000: {
+          items: 5
         }
       }
     });
   });
 </script>
+
+
+
 
 
 
