--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
     </a>
 
     <div class="bx bx-menu" id="menu-icon">
-      <i class="bi bi-list"></i>
     </div>
 
     <nav class="navbar">
@@ -46,7 +45,7 @@
       <span class="circle-spin2"></span>
     </div>
     <div class="home-content">
-      <h1>Hi, I'm<span></span> Miguel Castillo</h1>
+      <h1 id="I">Hi, I'm <span >Miguel Castillo</span> </h1>
       <div class="text-animate">
         <h3>Front-End Developer</h3>
       </div>
@@ -200,7 +199,7 @@
     </div>
   </section>
 
-  <section class="SKills">
+  <section class="SKills" id="Skills">
     <div>
       <h1 id="MY">My <span>Skills</span></h1>
       <div class="skill-container">
@@ -302,7 +301,7 @@
       </div>
   </section>
 
-  <section class="Projects">
+  <section class="Projects" id="Projects">
     <h1 id="MY">My <span>Projects</span></h1>
     <div class="projects-container">
 
@@ -389,7 +388,7 @@
     </div>
   </section>
 
-  <section class="Contact">
+  <section class="Contact" id="Contact">
     <h1 id="contact">Contact <span>Me</span></h1>
     <form action="#">
       <div class="input-box">
@@ -421,6 +420,15 @@
       </div>
     </form>
   </section>
+
+  <footer class="footer">
+    <div class="footer-text">
+      <p>Copyrigth &copy; 2023 by Miguel Angel Castillo | All Rigths Reserved</p>
+    </div>
+    <div class="footer-iconTop">
+      <a href="#"><i class='bx bx-up-arrow-alt'></i></a>
+    </div>
+  </footer>
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
