--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <h2 id="ln">Lenguages</h2>
         <div class="lenguages">
           <div class="owl-carousel owl-carousel-2">
-            <div class="item">
+            <div class="item active">
               <div class="card" id="HTML">
                 <div class="icon">
                   <i class='bx bxl-html5'></i>
@@ -448,7 +448,6 @@
       mouseDrag: false,
       responsive: {
         0: {
-
           items: 1
         },
         600: {
@@ -474,10 +473,10 @@
           items: 1
         },
         600: {
-          items: 3
+          items: 1
         },
         1000: {
-          items: 5
+          items: 1
         }
       }
     });
