--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <h2 id="ln">Lenguages</h2>
         <div class="lenguages">
           <div class="owl-carousel owl-carousel-2">
-            <div class="item active">
+            <div class="item">
               <div class="card" id="HTML">
                 <div class="icon">
                   <i class='bx bxl-html5'></i>
@@ -448,6 +448,7 @@
       mouseDrag: false,
       responsive: {
         0: {
+
           items: 1
         },
         600: {
@@ -473,19 +474,14 @@
           items: 1
         },
         600: {
-          items: 1
+          items: 3
         },
         1000: {
-          items: 1
+          items: 5
         }
       }
     });
   });
 </script>
-
-
-
-
-
 
 </html>
