--- a/index.html
+++ b/index.html
@@ -33,17 +33,14 @@
       <a href="#About Me">About Me</a>
       <a href="#Skills">Skills</a>
       <a href="#Projects">Projects</a>
-      <a href="#Contact">Contact</a>
+      <a id="C" href="#Contact">Contact</a>
     </nav>
   </header>
 
   <section class="Home" id="Home">
-    <div class="Foto">
-      <img src="../img/1288491.jpg" alt="ad">
-      <span class="circle-spin"></span>
-      <span class="circle-spin2"></span>
-    </div>
+
     <div class="home-content">
+
       <h1 id="I">Hi, I'm <span>Miguel Castillo</span> </h1>
       <div class="text-animate">
         <h3>Front-End Developer</h3>
@@ -64,7 +61,13 @@
         <a href="#" class="bx-Whatssap"><i class="bi bi-whatsapp"></i></a>
         <a href="#" class="bx-Git"><i class="bi bi-github"></i></a>
       </div>
+    </div>    <div class="ImgF"> 
+    <div class="Foto">
+      <img src="../img/1288491.jpg" alt="ad">
+      <span class="circle-spin"></span>
+      <span class="circle-spin2"></span>
     </div>
+  </div>
   </section>
 
   <section class="About" id="About Me">
@@ -442,21 +445,19 @@
   $(document).ready(function () {
     $('.owl-carousel-1').owlCarousel({
       loop: false,
-      margin: 10,
       nav: false,
       mouseDrag: false,
+      touchDrag: false,
       responsive: {
         0: {
-          items: 1
+          items: 1,
         },
         600: {
-
-          items: 1
+          items: 1,
         }
         ,
         1000: {
-
-          items: 1
+          items: 1,
         }
       }
     });
