--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
         digital development!
       </p>
       <div class="btn-box">
-        <a href="" class="btn">Hire Me</a>
-        <a href="" class="btn">Let's Talk</a>
+        <a href="src/Hoja de vida Miguel Castillo.pdf" class="btn" download="Hoja de vida Miguel Castillo.pdf">Download CV</a>
+        <a href="#Contact" class="btn">Let's Talk</a>
       </div>
       <div class="home-rds">
-        <a href="#" class="bx-facebox"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="bx-Linkelin"><i class="bx bxl-linkedin"></i></a>
-        <a href="#" class="bx-Whatssap"><i class="bi bi-whatsapp"></i></a>
-        <a href="#" class="bx-Git"><i class="bi bi-github"></i></a>
+        <a href="https://www.facebook.com/miguelangel.castillopinzon" class="bx-facebox"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.linkedin.com/in/miguel-angel-castillo-pinzon-a2532729a/" class="bx-Linkelin" target="_blank"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://wa.me/+573206058784" class="bx-Whatssap" target="_blank"><i class="bi bi-whatsapp"></i></a>
+        <a href="https://github.com/MangelC25?tab=repositories" class="bx-Git" target="_blank"><i class="bi bi-github"></i></a>
       </div>
     </div>    <div class="ImgF"> 
     <div class="Foto">
-      <img src="../img/1288491.jpg" alt="ad">
+      <img src="img/Imagen1.jpg" alt="ad">
       <span class="circle-spin"></span>
       <span class="circle-spin2"></span>
     </div>
@@ -79,7 +79,7 @@
             <div id="Acontenedor">
               <div class="card text-center border border-0 bg-transparent py-4 text-white align-items-center">
                 <div class="image-container">
-                  <img src="../img/1288491.jpg" class="card-img img-fluid" alt="image1" id="imagen" />
+                  <img src="img/AboutMe.jpg" class="card-img img-fluid" alt="image1" id="imagen" />
                   <span class="circle-spin"></span>
                   <span class="circle-spin2"></span>
                 </div>
@@ -107,7 +107,7 @@
             <div id="Acontenedor">
               <div class="card text-center border border-0 bg-transparent py-4 text-white align-items-center">
                 <div class="image-container">
-                  <img src="../img/1288491.jpg" class="card-img img-fluid" alt="image1" id="imagen" />
+                  <img src="img/Education.jpg" class="card-img img-fluid" alt="image1" id="imagen" />
                   <span class="circle-spin"></span>
                   <span class="circle-spin2"></span>
                 </div>
@@ -135,7 +135,7 @@
             <div id="Acontenedor">
               <div class="card text-center border border-0 bg-transparent py-4 text-white align-items-center">
                 <div class="image-container">
-                  <img src="../img/1288491.jpg" class="card-img img-fluid" alt="image1" id="imagen" />
+                  <img src="img/Passions.jpg" class="card-img img-fluid" alt="image1" id="imagen" />
                   <span class="circle-spin"></span>
                   <span class="circle-spin2"></span>
                 </div>
@@ -164,7 +164,7 @@
             <div id="Acontenedor">
               <div class="card text-center border border-0 bg-transparent py-4 text-white align-items-center">
                 <div class="image-container">
-                  <img src="../img/1288491.jpg" class="card-img img-fluid" alt="image1" id="imagen" />
+                  <img src="img/Competences.jpg" class="card-img img-fluid" alt="image1" id="imagen" />
                   <span class="circle-spin"></span>
                   <span class="circle-spin2"></span>
                 </div>
@@ -392,29 +392,29 @@
 
   <section class="Contact" id="Contact">
     <h1 id="contact">Contact <span>Me</span></h1>
-    <form action="#">
+    <form action="https://formspree.io/f/xoqoovka" method="post">
       <div class="input-box">
         <div class="input-field">
-          <input type="text" placeholder="Full Name" required>
+          <input name="Name" type="text" placeholder="Full Name" required>
           <span class="focus"></span>
         </div>
         <div class="input-field">
-          <input type="text" placeholder="Email Address" required>
+          <input name="Email" type="text" placeholder="Email Address" required>
           <span class="focus"></span>
         </div>
       </div>
       <div class="input-box">
         <div class="input-field">
-          <input type="textr" placeholder="Mobile Number" required>
+          <input name="Number" type="text" placeholder="Mobile Number" required>
           <span class="focus"></span>
         </div>
         <div class="input-field">
-          <input type="text" placeholder="Email Subject" required>
+          <input name="Subject" type="text" placeholder="Email Subject" required>
           <span class="focus"></span>
         </div>
       </div>
       <div class="textarea-field">
-        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
+        <textarea name="Message" id="Message" cols="30" rows="10" placeholder="Your Message" required></textarea>
         <span class="focus"></span>
       </div>
       <div class="btn-box btns">
