--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                   <span id="SpSASS"><i class='bx bxl-sass'></i>SASS</span>
                 </div>
                 <div id="Enlaces">
-                  <a href="#" class="bx-Link"><i class='bx bx-link'></i></a>
+                  <a href="https://miguelcastilloengineer.vercel.app/" class="bx-Link"><i class='bx bx-link'></i></a>
                   <a href="https://github.com/MangelC25/Portfolio-Website-Miguel-Castillo.git" class="bx-Git"
                     target="_blank"><i class="bi bi-github"></i></a>
                 </div>
@@ -384,7 +384,7 @@
         </div>
       </div>
       <div class="viewm">
-        <button type="button" class="btn" id="viewmp"><a href="#" target="_blank">View More Projects</a></button>
+        <button type="button" class="btn" id="viewmp"><a href="#">View More Projects</a></button>
       </div>
 
     </div>
