--- a/index.html
+++ b/index.html
@@ -21,19 +21,31 @@
 
 <body>
   <header class="header">
-    <a href="#" class="logo">
+
+    <a href="/" class="logo navbar-brand">
       <img src="../img/Logo.png" alt="logo" />
     </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
+        aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon navbar-dark fs-1 hove"></span>
+      </button>
 
-    <div class="bx bx-menu" id="menu-icon">
-    </div>
+    <nav class="navbar navbar-expand-sm">
 
-    <nav class="navbar">
-      <a href="#Home">Home</a>
-      <a href="#About Me">About Me</a>
-      <a href="#Skills">Skills</a>
-      <a href="#Projects">Projects</a>
-      <a id="C" href="#Contact">Contact</a>
+
+
+      <div class="collapse navbar-collapse" id="navbar">
+
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link active" href="#Home">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#About Me">About Me</a></li>
+          <li class="nav-item"><a class="nav-link" href="#Skills">Skills</a></li>
+          <li class="nav-item"><a class="nav-link" href="#Projects">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" id="C" href="#Contact">Contact</a></li>
+        </ul>
+
+      </div>
+
     </nav>
   </header>
 
@@ -52,22 +64,27 @@
         digital development!
       </p>
       <div class="btn-box">
-        <a href="src/Hoja de vida Miguel Castillo.pdf" class="btn" download="Hoja de vida Miguel Castillo.pdf">Download CV</a>
+        <a href="src/Hoja de vida Miguel Castillo.pdf" class="btn" download="Hoja de vida Miguel Castillo.pdf">Download
+          CV</a>
         <a href="#Contact" class="btn">Let's Talk</a>
       </div>
       <div class="home-rds">
-        <a href="https://www.facebook.com/miguelangel.castillopinzon" class="bx-facebox"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.linkedin.com/in/miguel-angel-castillo-pinzon-a2532729a/" class="bx-Linkelin" target="_blank"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.facebook.com/miguelangel.castillopinzon" class="bx-facebox"><i
+            class="bi bi-facebook"></i></a>
+        <a href="https://www.linkedin.com/in/miguel-angel-castillo-pinzon-a2532729a/" class="bx-Linkelin"
+          target="_blank"><i class="bx bxl-linkedin"></i></a>
         <a href="https://wa.me/+573206058784" class="bx-Whatssap" target="_blank"><i class="bi bi-whatsapp"></i></a>
-        <a href="https://github.com/MangelC25?tab=repositories" class="bx-Git" target="_blank"><i class="bi bi-github"></i></a>
+        <a href="https://github.com/MangelC25?tab=repositories" class="bx-Git" target="_blank"><i
+            class="bi bi-github"></i></a>
       </div>
-    </div>    <div class="ImgF"> 
-    <div class="Foto">
-      <img src="img/Imagen1.jpg" alt="ad">
-      <span class="circle-spin"></span>
-      <span class="circle-spin2"></span>
     </div>
-  </div>
+    <div class="ImgF">
+      <div class="Foto">
+        <img src="img/Imagen1.jpg" alt="ad">
+        <span class="circle-spin"></span>
+        <span class="circle-spin2"></span>
+      </div>
+    </div>
   </section>
 
   <section class="About" id="About Me">
