--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         digital development!
       </p>
       <div class="btn-box">
-        <a href="src/Hoja de vida Miguel Castillo.pdf" class="btn" download="Hoja de vida Miguel Castillo.pdf">Download
+        <a href="src/MIGUEL ÁNGEL CASTILLO PINZÓN CV.pdf" class="btn" download="Hoja de vida Miguel Castillo.pdf">Download
           CV</a>
         <a href="#Contact" class="btn">Let's Talk</a>
       </div>
