--- a/index.html
+++ b/index.html
@@ -214,6 +214,13 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        </div>
+      
       </div>
     </div>
   </section>
@@ -224,7 +231,7 @@
       <div class="skill-container">
         <h3 id="ln">Lenguages</h3>
         <div class="lenguages">
-          <div class="owl-carousel owl-carousel-2">
+          <div class="owl-carousel owl-carousel-2 owl-theme owl-loaded owl-drag">
             <div class="item">
               <div class="card" id="HTML">
                 <div class="icon">
@@ -324,7 +331,7 @@
     <h1 id="MY">My <span>Projects</span></h1>
     <div class="projects-container">
 
-      <div class="owl-carousel owl-carousel-1">
+      <div class="owl-carousel owl-carousel-1 owl-loaded owl-drag">
         <div class="item">
           <div class="card">
             <div class="card-container">
@@ -351,54 +358,7 @@
           </div>
         </div>
 
-        <div class="item">
-          <div class="card">
-            <div class="card-container">
-              <div class="card-body">
-
-                <h1 class="card-title">Portfolio Web 2</h1>
-                <p class="card-text">Explore my portfolio website, a showcase of creativity and technical skills.
-                  Designed
-                  with HTML, CSS, Bootstrap, and SASS, this project stands out for its modern appeal.</p>
-                <div id="Spans">
-                  <span id="SpHTML"><i class='bx bxl-html5'></i>HTML</span>
-                  <span id="SpCSS"><i class='bx bxl-css3'></i>CSS</span>
-                  <span id="SpJavascript"><i class='bx bxl-javascript'></i>Javascript</span>
-                  <span id="SpBootstrap"><i class='bx bxl-bootstrap'></i>Bootstrap</span>
-                  <span id="SpSASS"><i class='bx bxl-sass'></i>SASS</span>
-                </div>
-                <div>
-                  <a href="#" class="bx-Link"><i class='bx bx-link'></i></a>
-                  <a href="#" class="bx-Git"><i class="bi bi-github"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="item">
-          <div class="card">
-            <div class="card-container">
-              <div class="card-body">
-
-                <h1 class="card-title">Portfolio Web 3</h1>
-                <p class="card-text">Explore my portfolio website, a showcase of creativity and technical skills.
-                  Designed
-                  with HTML, CSS, Bootstrap, and SASS, this project stands out for its modern appeal.</p>
-                <div id="Spans">
-                  <span id="SpHTML"><i class='bx bxl-html5'></i>HTML</span>
-                  <span id="SpCSS"><i class='bx bxl-css3'></i>CSS</span>
-                  <span id="SpBootstrap"><i class='bx bxl-bootstrap'></i>Bootstrap</span>
-                  <span id="SpSASS"><i class='bx bxl-sass'></i>SASS</span>
-                </div>
-                <div>
-                  <a href="#" class="bx-Link"><i class='bx bx-link'></i></a>
-                  <a href="#" class="bx-Git"><i class="bi bi-github"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        
       </div>
       <div class="viewm">
         <button type="button" class="btn" id="viewmp"><a href="#">View More Projects</a></button>
@@ -462,9 +422,8 @@
   $(document).ready(function () {
     $('.owl-carousel-1').owlCarousel({
       loop: false,
-      nav: false,
-      mouseDrag: false,
-      touchDrag: false,
+      mouseDrag: true,
+      touchDrag: true,
       responsive: {
         0: {
           items: 1,
@@ -483,7 +442,7 @@
   $(document).ready(function () {
     $('.owl-carousel-2').owlCarousel({
       loop: false,
-      nav: false,
+      dots: true,
       items: 5,
       margin: 10,
       responsiveClass: true,
