--- a/index.html
+++ b/index.html
@@ -88,9 +88,10 @@
   </section>
 
   <section class="About" id="About Me">
+    <div style="padding-top: 12rem; margin-top: -10rem; padding-bottom: 2rem; ">
     <h2 class="heading">About <span>Me</span></h2>
     <div class="about-content">
-      <div id="carouselExample" class="carousel slide" data-bs-ride="true" data-bs-touch="true">
+      <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-touch="true">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div id="Acontenedor">
@@ -223,10 +224,11 @@
       
       </div>
     </div>
+  </div>
   </section>
 
   <section class="SKills" id="Skills">
-    <div>
+    <div style="padding-top: 12rem;">
       <h1 id="MY">My <span>Skills</span></h1>
       <div class="skill-container">
         <h3 id="ln">Lenguages</h3>
@@ -292,6 +294,7 @@
                 </div>
               </div>
             </div>
+            
           </div>
         </div>
 
@@ -328,6 +331,7 @@
   </section>
 
   <section class="Projects" id="Projects">
+    <div style="padding-top: 13rem;">
     <h1 id="MY">My <span>Projects</span></h1>
     <div class="projects-container">
 
@@ -365,6 +369,7 @@
       </div>
 
     </div>
+  </div>
   </section>
 
   <section class="Contact" id="Contact">
