--- a/index.html
+++ b/index.html
@@ -446,19 +446,25 @@
 
   $(document).ready(function () {
     $('.owl-carousel-2').owlCarousel({
-      loop: false,
       dots: true,
+      animateOut: 'fadeOut',
+      autoplay:true,
+      autoplayTimeout:5000,
+      autoplayHoverPause:false,
       items: 5,
       margin: 10,
       responsiveClass: true,
       responsive: {
         0: {
+          loop: true,
           items: 1
         },
         600: {
+          loop: true,
           items: 3
         },
         1000: {
+          loop: false,
           items: 5
         }
       }
