--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
       animateOut: 'fadeOut',
       autoplay:true,
       autoplayTimeout:5000,
-      autoplayHoverPause:false,
+      autoplayHoverPause:true,
       items: 5,
       margin: 10,
       responsiveClass: true,
