--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         Who I Am?
                       </h1>
                       <hr />
-                      <p class="card-text my-4 fs-3" data-section="AboutMe" data-value="description1">
+                      <p class="card-text my-4" data-section="AboutMe" data-value="description1">
                         I am a passionate developer with an insatiable appetite
                         for technology and innovation. My goal is to turn concepts
                         into flawless digital experiences that make life more
@@ -140,7 +140,7 @@
                         Education & Skills
                       </h1>
                       <hr />
-                      <p class="card-text my-4 fs-3" data-section="AboutMe" data-value="description2">
+                      <p class="card-text my-4" data-section="AboutMe" data-value="description2">
                         I graduated in Systems Engineering from the University of Cundinamarca in 2023. During my
                         studies, I acquired specialized skills in software development, database design, cybersecurity,
                         and problem-solving. My solid education and continuous focus on learning have prepared me to
@@ -166,7 +166,7 @@
                         Passions and Hobbies
                       </h1>
                       <hr />
-                      <p class="card-text my-4 fs-3" data-section="AboutMe" data-value="description3">
+                      <p class="card-text my-4" data-section="AboutMe" data-value="description3">
                         Passionate about video games and innovative technologies,
                         my fascination revolves around creating virtual worlds and
                         immersion in the metaverse. My love for immersive
@@ -196,7 +196,7 @@
                         Professional Skills and Competencies
                       </h1>
                       <hr />
-                      <p class="card-text my-4 fs-3" data-section="AboutMe" data-value="description4">
+                      <p class="card-text my-4" data-section="AboutMe" data-value="description4">
                         I stand out with a combination of technical and personal
                         skills. I have a strong ability to work in teams,
                         developing projects in collaborative environments. My
