--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <a href="/" class="logo navbar-brand">
       <img src="../img/Logo.png" alt="logo" />
     </a>
+    <button type="button" id="Btheme">
+      asdasdas
+    </button>
     <button type="button" id="leng" data-language="es">
       <img src="img/lenguage/English.png" alt="lenguage" id="lenguage">
       <span id="ACR">EN</span>
@@ -432,6 +435,7 @@
 </body>
 
 <script src="JS/Multilenguage.js"></script>
+<script src="JS/Theme.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
