--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <a href="/" class="logo navbar-brand">
       <img src="../img/Logo.png" alt="logo" />
     </a>
-    <button type="button" id="Btheme">
-      asdasdas
+    <button type="button" id="Btheme" class="Btheme">
+      <i class='bx bxs-moon'></i>
     </button>
     <button type="button" id="leng" data-language="es">
       <img src="img/lenguage/English.png" alt="lenguage" id="lenguage">
@@ -75,8 +75,8 @@
         <a href="#Contact" class="btn" data-section="profile" data-value="talk">Let's Talk</a>
       </div>
       <div class="home-rds">
-        <a href="https://www.facebook.com/miguelangel.castillopinzon" class="bx-facebox"><i
-            class="bi bi-facebook"></i></a>
+        <a href="https://www.facebook.com/miguelangel.castillopinzon" class="bx-facebox">
+          <i class="bi bi-facebook"></i></a>
         <a href="https://www.linkedin.com/in/miguel-angel-castillo-pinzon-a2532729a/" class="bx-Linkelin"
           target="_blank"><i class="bx bxl-linkedin"></i></a>
         <a href="https://wa.me/+573206058784" class="bx-Whatssap" target="_blank"><i class="bi bi-whatsapp"></i></a>
