--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
   </section>
 
   <section class="SKills" id="Skills">
-    <div style="padding-top: 12rem;">
+    <div style="padding-top: 5rem;">
       <h1 id="MY">
-        <span data-section="Skills" data-value="My">My </span>
+        <span data-section="Skills" data-value="My" id="My">My </span>
         <span data-section="Skills" data-value="skill" id="S">Skills</span>
       </h1>
       <div class="skill-container">
@@ -344,7 +344,7 @@
   <section class="Projects" id="Projects">
     <div style="padding-top: 13rem;">
       <h1 id="MY">
-        <span data-section="Projects" data-value="My">My</span> 
+        <span data-section="Projects" data-value="My" id="My">My</span> 
         <span data-section="Projects" data-value="Project" id="D">Projects</span>
       </h1>
       <div class="projects-container">
@@ -381,7 +381,7 @@
 
         </div>
         <div class="viewm">
-          <button type="button" class="btn" id="viewmp"><a href="#" data-section="Projects" data-value="vmore">View More Projects</a></button>
+          <button type="button" class="btn" id="viewmp"><a href="#" data-section="Projects" data-value="vmore" id="VWM">View More Projects</a></button>
         </div>
 
       </div>
@@ -390,7 +390,7 @@
 
   <section class="Contact" id="Contact">
     <h1 id="contact">
-      <span data-section="Contact" data-value="contac">Contact</span> 
+      <span data-section="Contact" data-value="contac" id="Ct">Contact</span> 
       <span data-section="Contact" data-value="Me" id="C">Me</span>
     </h1>
     <form action="https://formspree.io/f/xoqoovka" method="post">
@@ -419,7 +419,7 @@
         <span class="focus"></span>
       </div>
       <div class="btn-box btns">
-        <button type="submit" class="btn" data-section="Contact" data-value="bsubmit">Submit</button>
+        <button type="submit" class="btn" data-section="Contact" data-value="bsubmit" id="bsubmit">Submit</button>
       </div>
     </form>
   </section>
