--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
 
-
   <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
   <link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
 
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
 
 <body>
@@ -37,16 +38,16 @@
       <span class="navbar-toggler-icon navbar-dark fs-1 hove"></span>
     </button>
 
-    <nav class="navbar navbar-expand-md">
+    <nav class="navbar navbar-expand-lg">
 
       <div class="collapse navbar-collapse" id="navbar" data-section="navb">
 
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link active" href="#Home">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#About Me">About Me</a></li>
-          <li class="nav-item"><a class="nav-link" href="#Skills">Skills</a></li>
-          <li class="nav-item"><a class="nav-link" href="#Projects">Projects</a></li>
-          <li class="nav-item"><a class="nav-link" id="C" href="#Contact">Contact</a></li>
+          <li class="nav-item"><a class="nav-link active" href="#Home" data-section="nav" data-value="1">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#About Me" data-section="nav" data-value="2">About Me</a></li>
+          <li class="nav-item"><a class="nav-link" href="#Skills" data-section="nav"  data-value="3">Skills</a></li>
+          <li class="nav-item"><a class="nav-link" href="#Projects" data-section="nav" data-value="4">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" id="C" href="#Contact" data-section="nav" data-value="5">Contact</a></li>
         </ul>
 
       </div>
