--- a/index.html
+++ b/index.html
@@ -368,6 +368,7 @@
                     <span id="SpSASS"><i class='bx bxl-sass'></i>SASS</span>
                     <span id="SpJavascript"><i class='bx bxl-javascript'></i>JavaScript</span>
                     <span id="SpJSON"><i class='bx bxs-file-json'></i>JSON</span>
+                    <span id="SpjQuery"><i class='bx bxl-jquery'></i>jQuery</span>
                   </div>
                   <div id="Enlaces">
                     <a href="https://miguelcastilloengineer.vercel.app/" class="bx-Link"><i class='bx bx-link'></i></a>
