--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 
   <section class="Home" id="Home">
 
+    <div class="FondoHome" id="fondoH1"></div>
+    <div class="FondoHome" id="fondoH2"></div>
+
     <div class="home-content">
 
       <h1 id="I" data-section="profile" data-value="name"><span>Hi, I'm Miguel Castillo</span> </h1>
@@ -95,7 +98,10 @@
   </section>
 
   <section class="About" id="About Me">
-    <div style="padding-top: 12rem; margin-top: -10rem; padding-bottom: 2rem; ">
+
+    <div style="padding-top: 12rem; margin-top: -10rem; padding-bottom: 2rem; ">    
+    <div class="FondoAbout" id="fondoA1"></div>
+    <div class="FondoAbout" id="fondoA2"></div>
       <h2 class="heading">
         <span data-section="AboutMe" data-value="About" id="A">About </span>
         <span data-section="AboutMe" data-value="Me" id="M">Me</span>
@@ -237,6 +243,8 @@
   </section>
 
   <section class="SKills" id="Skills">
+    <div class="FondoSkills" id="fondoS1"></div>
+    <div class="FondoSkills" id="fondoS2"></div>
     <div style="padding-top: 5rem;">
       <h1 id="MY">
         <span data-section="Skills" data-value="My" id="My">My </span>
@@ -343,6 +351,8 @@
   </section>
 
   <section class="Projects" id="Projects">
+    <div class="FondoProjects" id="fondoP1"></div>
+    <div class="FondoProjects" id="fondoP2"></div>
     <div style="padding-top: 13rem;">
       <h1 id="MY">
         <span data-section="Projects" data-value="My" id="My">My</span> 
@@ -391,6 +401,8 @@
   </section>
 
   <section class="Contact" id="Contact">
+    <div class="FondoContact" id="fondoC1"></div>
+    <div class="FondoContact" id="fondoC2"></div>
     <h1 id="contact">
       <span data-section="Contact" data-value="contac" id="Ct">Contact</span> 
       <span data-section="Contact" data-value="Me" id="C">Me</span>
