--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <button type="button" id="Btheme" class="Btheme">
       <i class='bx bxs-moon'></i>
     </button>
-    <button type="button" id="leng" data-language="es">
+    <button type="button" id="leng" data-language="en">
       <img src="img/lenguage/English.png" alt="lenguage" id="lenguage">
       <span id="ACR">EN</span>
     </button>
@@ -407,7 +407,7 @@
       <span data-section="Contact" data-value="contac" id="Ct">Contact</span> 
       <span data-section="Contact" data-value="Me" id="C">Me</span>
     </h1>
-    <form action="https://formspree.io/f/xoqoovka" method="post">
+    <form action="https://formspree.io/f/xoqoovka" method="post" id="form">
       <div class="input-box">
         <div class="input-field">
           <input name="Name" type="text" data-section="Contact" data-value="Pfullname" placeholder="Full Name" required>
