--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
-
   <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
   <link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
 
@@ -80,17 +78,16 @@
       </div>
       <div class="home-rds">
         <a href="https://www.facebook.com/miguelangel.castillopinzon" class="bx-facebox">
-          <i class="bi bi-facebook"></i></a>
+          <i class='bx bxl-facebook-circle'></i></a>
         <a href="https://www.linkedin.com/in/miguel-angel-castillo-pinzon-a2532729a/" class="bx-Linkelin"
           target="_blank"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://wa.me/+573206058784" class="bx-Whatssap" target="_blank"><i class="bi bi-whatsapp"></i></a>
-        <a href="https://github.com/MangelC25?tab=repositories" class="bx-Git" target="_blank"><i
-            class="bi bi-github"></i></a>
+        <a href="https://wa.me/+573206058784" class="bx-Whatssap" target="_blank"><i class='bx bxl-whatsapp' ></i></a>
+        <a href="https://github.com/MangelC25?tab=repositories" class="bx-Git" target="_blank"><i class='bx bxl-github' ></i></a>
       </div>
     </div>
     <div class="ImgF">
       <div class="Foto">
-        <img src="img/Imagen1.jpg" alt="ad">
+        <img src="img/Imagen1.png" alt="ad">
         <span class="circle-spin"></span>
         <span class="circle-spin2"></span>
       </div>
