--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <i class='bx bxs-moon'></i>
     </button>
     <button type="button" id="leng" data-language="en">
-      <img src="img/lenguage/English.png" alt="lenguage" id="lenguage">
+      <img src="img/lenguage/English_1.webp" alt="lenguage" id="lenguage">
       <span id="ACR">EN</span>
     </button>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
@@ -87,7 +87,7 @@
     </div>
     <div class="ImgF">
       <div class="Foto">
-        <img src="img/Imagen1.png" alt="ad">
+        <img src="img/Imagen1.webp" alt="ad">
         <span class="circle-spin"></span>
         <span class="circle-spin2"></span>
       </div>
@@ -110,7 +110,7 @@
               <div id="Acontenedor">
                 <div class="card text-center border border-0 bg-transparent py-4 text-white align-items-center">
                   <div class="image-container">
-                    <img src="img/AboutMe.jpg" class="card-img img-fluid" alt="image1" id="imagen" />
+                    <img src="img/AboutMe.webp" class="card-img img-fluid" alt="image1" id="imagen" />
                     <span class="circle-spin"></span>
                     <span class="circle-spin2"></span>
                   </div>
@@ -136,7 +136,7 @@
               <div id="Acontenedor">
                 <div class="card text-center border border-0 bg-transparent py-4 text-white align-items-center">
                   <div class="image-container">
-                    <img src="img/Education.jpg" class="card-img img-fluid" alt="image1" id="imagen" />
+                    <img src="img/Education.webp" class="card-img img-fluid" alt="image1" id="imagen" />
                     <span class="circle-spin"></span>
                     <span class="circle-spin2"></span>
                   </div>
@@ -162,7 +162,7 @@
               <div id="Acontenedor">
                 <div class="card text-center border border-0 bg-transparent py-4 text-white align-items-center">
                   <div class="image-container">
-                    <img src="img/Passions.jpg" class="card-img img-fluid" alt="image1" id="imagen" />
+                    <img src="img/Passions.webp" class="card-img img-fluid" alt="image1" id="imagen" />
                     <span class="circle-spin"></span>
                     <span class="circle-spin2"></span>
                   </div>
@@ -192,7 +192,7 @@
               <div id="Acontenedor">
                 <div class="card text-center border border-0 bg-transparent py-4 text-white align-items-center">
                   <div class="image-container">
-                    <img src="img/Competences.jpg" class="card-img img-fluid" alt="image1" id="imagen" />
+                    <img src="img/Competences.webp" class="card-img img-fluid" alt="image1" id="imagen" />
                     <span class="circle-spin"></span>
                     <span class="circle-spin2"></span>
                   </div>
